bugfix: toc overflow

--- a/src/main/resources/static/yaio-explorerapp/css/formatter.css
+++ b/src/main/resources/static/yaio-explorerapp/css/formatter.css
@@ -210,6 +210,7 @@ div.container-content-desc div.mermaid {
     max-height: 400px;
     top: 10px;
     right: 10px;
+    overflow-y: auto;
 }
 .sidebartoc ul{
     list-style-type: disc;
